[package]
name = "panic_search"
version = "0.1.2-alpha.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
description = "Automatically search for panics when they happen"
license = "MIT/Apache-2.0"
repository = "https://github.com/panicbit/panic_search_rs"

[dependencies]
open = "1.2.1"
percent-encoding = "1.0.1"
