[package]
name = "panic_search"
version = "0.1.3"
authors = ["panicbit <panicbit.dev@gmail.com>"]
description = "Automatically search for panics when they happen"
license = "MIT/Apache-2.0"
repository = "https://github.com/panicbit/panic_search_rs"
documentation = "https://docs.rs/panic_search"

[dependencies]
open = "1.2.1"
percent-encoding = "1.0.1"
